add image to post for fillings
